fixed dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,9 @@ nav {
   padding: 1rem 2rem;
   display: flex;
   justify-content: center;
-  gap: 2rem;
+  gap: 4rem;
   background-color: rgb(39, 38, 38);
+  
 }
 
 nav a{
@@ -23,7 +24,7 @@ nav a{
 
 nav a:hover {
   color: greenyellow;
-  border-bottom: 1px solid greenyellow;
+  border-bottom: 0.1px solid greenyellow;
 }
 
 h1 {
@@ -92,6 +93,7 @@ p{
   max-width: 800px; 
   margin: auto; 
   line-height: 1.6;
+  color: whitesmoke;
 }
 
 .sidebyside {
@@ -141,7 +143,7 @@ p{
 }
 
 .profile-card .left img {
-  width: 40vh;
+  width: 35vh;
   border-radius: 10px;
   height: auto;
   object-fit: cover;
@@ -279,23 +281,46 @@ p{
 }
 
 body.dark-mode {
-  background-color: rgba(245, 245, 245, 0.692);
+  background-color: #d4d4aa;
   color: black;}
 
 body.dark-mode a {
   color: #90caf9;
 }
 
-body.dark-mode h2{
-    color: greenyellow;
-}
-
-body.dark-mode h3{
-    color: #d8e0e0;
+body.dark-mode h2,h3{
+    color: black;
 }
 
 body.dark-mode p{
-    color: #e5f2f3;
+    color: black;
+}
+
+body.dark-mode section{
+    background-color: #f0f0c0;
+    color: black;
+}
+
+body.dark-mode nav {
+    background-color: #f0f0c0;
+    
+}
+
+body.dark-mode nav a {
+    color: black;
+    text-decoration: none;
+    transition: color 0.3s ease, border-bottom 0.3s ease;
+    border-bottom: 0.1px solid black;
+}
+
+body.dark-mode nav a:hover {
+    color: black;
+    border-bottom: 0.1px solid black;
+}
+
+body.dark-mode iframe{
+  border: 2px solid black;
+  filter: invert(100%);
 }
 
 iframe{
@@ -316,6 +341,8 @@ body {
 nav {
         flex-direction: column;
         gap: 1rem;
+        text-align: center;
+        align-items: center;
     } 
 
 h1 {
